# quatrex

./: .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  404.html  AUTHORS.md  LICENSE  README.md  environment-dev.yaml  environment_A1.yml  environment_A2.yml  index.html  justfile  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup-miniconda-patched-environment-dev.yaml  sitemap.xml  tash apply stash@{1}  test_piphoton_integration.py  test_piphoton_simple.py  test_transpose.py  zensical.toml
.cscs/: Dockerfile  Dockerfile.base  alps-ci.yaml
.cscs/quatrex-uenv-recipe/: compilers.yaml  config.yaml  environments.yaml  modules.yaml  spack_repo
.github/workflows/: copilot-setup-steps.yaml  docs.yaml  linting.yaml  qttools_tests.yaml  tests.yaml
.github/workflows/scripts/: show-git-diff.sh
api/: index.html
api/qttools/: index.html
api/qttools/boundary_conditions/: index.html
api/qttools/comm/: index.html
api/qttools/datastructures/: index.html
api/qttools/fft/: index.html
api/qttools/greens_function_solver/: index.html
api/qttools/kernels/: index.html
api/qttools/nevp/: index.html
api/qttools/profiling/: index.html
api/qttools/utils/: index.html
api/qttools/wave_function_solver/: index.html
api/quatrex/: index.html
api/quatrex/bandstructure/: index.html
api/quatrex/core/: index.html
api/quatrex/coulomb_screening/: index.html
api/quatrex/device/: index.html
api/quatrex/electron/: index.html
api/quatrex/grid/: index.html
api/quatrex/phonon/: index.html
api/quatrex/photon/: index.html
api/quatrex/post_processing/: index.html
contributing/: index.html
docs/: contributing.md  index.md
docs/api/: index.md
docs/getting_started/: first_simulation.md  installation.md  running_simulations.md  setup_simulations.md  what_is_quatrex.md
docs/guides/: index.md
docs/javascript/: mathjax.js
docs/overrides/partials/: logo.html
docs/scripts/: generate_api_pages.py  generate_parameter_docs.py
docs/stylesheets/: custom.css
docs/user_guide/: cli.md  index.md  input_data.md  methodology.md
docs/user_guide/examples/: cnt.md  index.md  mos2.md  silicon.md
docs/user_guide/methodology/: index.md  negf.md  obc.md  qtbm.md  quantum_transport.md
examples/: correlation_ek_fft.py  ek_indexer_dsdbcoo_example.py
examples/carbon-nanotube/: quatrex_config.toml
examples/carbon-nanotube-dist/: compute_config.toml  quatrex_config.toml
examples/carbon-nanotube-photon/: quatrex_config.toml
examples/carbon-nanotube-qtbm/: quatrex_config.toml
examples/carbon-nanotube-qtbm-phonon/: prepare_inputs.py  quatrex_config.toml
examples/cp2k-atomic-chain-qtbm/: quatrex_config.toml
examples/w90/hBN/: plotting_dielectric.ipynb  quatrex_config_dielectric.toml
examples/wann-si-bulk-qtbm/: quatrex_config.toml
getting_started/installation/: index.html
getting_started/running_simulations/: index.html
getting_started/setup_simulations/: index.html
scripts/: generate_parameter_docs.py  tune_nevp.py
scripts/analysis/: analyze_scba.ipynb  post-processing-currents.ipynb  post-processing.ipynb  scba_visualization.ipynb  spectrogram.ipynb  visualize_scba.ipynb
scripts/analysis/scba_container/: scba_container.py
search/: search_index.json
spack_repo/quatrex/: repo.yaml
src/qttools/: __about__.py  __init__.py  index.html
src/qttools/boundary_conditions/: __init__.py  boundary_method.py  boundary_system.py  index.html  lyapunov.py  lyapunov_system.py  obc.py  system_reduction.py
src/qttools/comm/: __init__.py  comm.py  index.html
src/qttools/convolutions/: __init__.py  ffts.py
src/qttools/cuDSS_binding/: ccuDSS.cpp  ccuDSS.pyx  ccuDSS_OLD.pyx  setup.py
src/qttools/datastructures/: __init__.py  dsdbcoo.py  dsdbcsr.py  dsdbsparse.py  index.html  routines.py
src/qttools/fft/: __init__.py  convolve.py  ffts.py  index.html
src/qttools/greens_function_solver/: __init__.py  _serinv.py  index.html  inv.py  rgf.py  rgf_dist.py  solver.py
src/qttools/kernels/: __init__.py  index.html  operator.py
src/qttools/lyapunov/: doubling.py  lyapunov.py  spectral.py  utils.py
src/qttools/nevp/: __init__.py  beyn.py  full.py  index.html  nevp.py
src/qttools/obc/: obc.py  sancho_rubio.py  spectral.py
src/qttools/profiling/: __init__.py  index.html  profiler.py  utils.py
src/qttools/toeplitz/: __init__.py  circulant.py  toeplitz.py
src/qttools/utils/: __init__.py  ek_indexer.py  gpu_utils.py  hdf5_utils.py  index.html  inplace_utils.py  input_utils.py  memory_utils.py  mpi_utils.py  solvers_utils.py  sparse_utils.py  stack_utils.py
src/qttools/wave_function_solver/: __init__.py  auto_select.py  cudss.py  cudss_v2.py  index.html  lu.py  mumps.py  pardiso.py  solver.py  superlu.py  thomas.py
src/quatrex/: __about__.py  __init__.py  index.html
src/quatrex/bandstructure/: band_edges.py  band_edges_dist.py  contact.py  index.html
src/quatrex/cli/: __init__.py  main.py
src/quatrex/core/: bsc.py  compute_config.py  config.py  constants.py  contact.py  device.py  index.html  observables.py  observables_dist.py  qtbm.py  quatrex_config.py  scba.py  scba_dist.py  scsp.py  sse.py  statistics.py  subsystem.py  transport.py  utils.py
src/quatrex/coulomb_screening/: __init__.py  block_screening.py  environment.py  environment_export.py  index.html  polarization.py  solver.py  solver_dist.py
src/quatrex/device/: __init__.py  contact.py  device.py  index.html  inputs.py
src/quatrex/dielectric_screening/: __init__.py
src/quatrex/electron/: __init__.py  _potential_generation.py  index.html  solver.py  solver_dist.py  sse_coulomb_screening.py  sse_fock.py  sse_fock_dist.py  sse_hartree.py  sse_phonon.py  sse_photon.py
src/quatrex/electrostatics/: _params.py  assembly.py  density_response.py  electrostatics.py  fermi_integral.py  fermi_integrals.py  geometry_config.py  meshing.py  mixer.py  params_minus_one_half.json  solver.py  (+2 more)
stylesheets/: custom.css
tests/quatrex/: conftest.py
user_guide/: index.html
user_guide/introduction/: index.html
user_guide/methodology/: index.html
user_guide/parameters/: index.html
(+662 files in other folders)
