[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quatrex"
authors = [
    { name = "Alexander Maeder", email = "almaeder@iis.ee.ethz.ch" },
    { name = "Alexandros Nikolaos Ziogas", email = "alziogas@iis.ee.ethz.ch" },
    { name = "Anders Winka", email = "awinka@iis.ee.ethz.ch" },
    { name = "Jiang Cao", email = "jiang.cao@iis.ee.ethz.ch" },
    { name = "Leonard Deuschle", email = "dleonard@iis.ee.ethz.ch" },
    { name = "Mathieu Luisier", email = "mluisier@iis.ee.ethz.ch" },
    { name = "Mauro Dossena", email = "mdossena@iis.ee.ethz.ch" },
    { name = "Nicolas Vetsch", email = "vetschn@iis.ee.ethz.ch" },
    { name = "Vincent Maillou", email = "vmaillou@iis.ee.ethz.ch" },
]
description = "Quantum Transport Simulations at the Exascale and Beyond"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["Nano-TCAD", "Quantum Transport", "NEGF"]
dynamic = ["version"]
requires-python = ">=3.13"

dependencies = [
    "numpy>=1.23.2",
    "scipy",
    "mpi4py",
    "numba",
    "pydantic",
    "ase",
    "meshio",
    "gmsh",
    "scikit-fem",
    "pyvista",
    "matplotlib",
    "threadpoolctl",
    "typer",
    "h5py",
]
    [project.optional-dependencies]
    gpu = ["cupy==13.2.0"]
    dev = [
        "pytest",
        "pytest-cov",
        "pytest-mpi",
        "pytest-xdist",
        "coverage",
        "black",
        "blacken-docs",
        "isort",
        "ruff",
        "clang-format",
        "pre-commit",
    ]
    docs = ["zensical", "mkdocstrings-python", "griffe-pydantic", "tabulate"]
    linting = ["pre-commit"]

    [project.urls]
    source = "https://github.com/quatrex/quatrex"
    documentation = "https://quatrex.github.io/quatrex/"

    [project.scripts]
    quatrex = "quatrex.cli:run_cli"

[tool.setuptools.dynamic]
version = { attr = "quatrex.__about__.__version__" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"*" = ["*.cu"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
numpy = ">=1.23.2"
scipy = "*"
mpi4py = "*"
numba = "*"
pydantic = "*"
matplotlib = "*"
threadpoolctl = "*"
typer = "*"

[tool.pixi.pypi-dependencies]
quatrex = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mpi = "*"
pytest-xdist = "*"
coverage = "*"

[tool.pixi.feature.lint.dependencies]
black = "*"
blacken-docs = "*"
isort = "*"
ruff = "*"
pre-commit = "*"

[tool.pixi.feature.docs.pypi-dependencies]
zensical = "*"
griffe-pydantic = "*"
mkdocstrings-python = "*"
tabulate = "*"

[tool.pixi.environments]
docs = { features = ["docs"], solve-group = "dev" }
test = { features = ["test"], solve-group = "dev" }
lint = { features = ["lint"], solve-group = "dev" }
dev = { features = ["test", "lint", "docs"], solve-group = "dev" }

# gpu = { features = ["gpu"] }


# hpc = { features = ["gpu"], solve-group = "hpc" }


[tool.pixi.tasks.docs]
cmd = """
python docs/scripts/generate_api_pages.py \
&& python docs/scripts/generate_parameter_docs.py \
&& zensical
"""
default-environment = "docs"

[tool.pixi.tasks.test]
cmd = "pytest"
default-environment = "test"

[tool.pixi.tasks.format]
cmd = """
isort --profile black . \
&& black . \
&& blacken-docs
"""

[tool.pixi.tasks.lint]
cmd = "ruff check"
default-environment = "lint"
