[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quatrex"
authors = [
    { name = "Alexander Maeder", email = "almaeder@iis.ee.ethz.ch" },
    { name = "Alexandros Nikolaos Ziogas", email = "alziogas@iis.ee.ethz.ch" },
    { name = "Anders Winka", email = "awinka@iis.ee.ethz.ch" },
    { name = "Jiang Cao", email = "jiang.cao@iis.ee.ethz.ch" },
    { name = "Leonard Deuschle", email = "dleonard@iis.ee.ethz.ch" },
    { name = "Mathieu Luisier", email = "mluisier@iis.ee.ethz.ch" },
    { name = "Mauro Dossena", email = "mdossena@iis.ee.ethz.ch" },
    { name = "Nicolas Vetsch", email = "vetschn@iis.ee.ethz.ch" },
    { name = "Vincent Maillou", email = "vmaillou@iis.ee.ethz.ch" },
]
description = "Quantum Transport Simulations at the Exascale and Beyond"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
keywords = ["Nano-TCAD", "Quantum Transport", "NEGF"]
dynamic = ["version"]
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "mpi4py>=4.1.0",
    "numba",
    "pydantic",
    "ase",
    "meshio",
    "gmsh",
    "scikit-fem",
    "pyvista>=0.46.0",
    "matplotlib",
    "threadpoolctl",
    "typer",
    "h5py",
]
    [project.optional-dependencies]
    dev = [
        "pytest",
        "pytest-cov",
        "pytest-mpi",
        "pytest-xdist",
        "coverage",
        "black",
        "blacken-docs",
        "isort",
        "ruff",
        "clang-format",
        "pre-commit",
        "ipykernel",
        "ipympl",
    ]
    docs = ["zensical", "mkdocstrings-python", "griffe", "griffe-pydantic", "tabulate"]
    gpu = ["cupy>=14.1.0"]

    [project.urls]
    source = "https://github.com/quatrex/quatrex"
    documentation = "https://quatrex.github.io/quatrex/"

    [project.scripts]
    quatrex = "quatrex.cli:run_cli"

[tool.setuptools.dynamic]
version = { attr = "quatrex.__about__.__version__" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.setuptools.package-data]
"*" = ["*.cu"]


# ==== Settings for pixi ===============================================
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.dependencies]
numpy = ">=2.3.0"
scipy = ">=1.16.0"
mpi4py = ">=4.1.0"
numba = "*"
pydantic = "*"
ase = "*"
meshio = "*"
scikit-fem = "*"
threadpoolctl = "*"
typer = "*"
h5py = "*"
gmsh = "*"
python-gmsh = "*"    # conda-forge gmsh does not include python bindings
pyvista = ">=0.46.0"
matplotlib = "*"

[tool.pixi.pypi-dependencies]
quatrex = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "dev" }
docs = { features = ["docs"], solve-group = "dev" }
gpu = { features = ["gpu"], solve-group = "dev" }

# This environment is used for GitHub CI/CD linting and testing, since
# the low-rank reference QTBM tests require pardiso to run.
ci = { features = ["dev", "pardiso"], solve-group = "dev" }

hpc = { features = ["hpc"], solve-group = "hpc", no-default-feature = true }


# --- Development features ---------------------------------------------
[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mpi = "*"
pytest-xdist = "*"
coverage = "*"
black = "*"
blacken-docs = "*"
isort = "*"
ruff = "*"
pre-commit = "*"
ipykernel = "*"
ipympl = "*"


# --- Documentation features -------------------------------------------
[tool.pixi.feature.docs.pypi-dependencies]
zensical = "*"
mkdocstrings-python = "*"
griffe = "*"
griffe-pydantic = "*"
tabulate = "*"

# --- GPU features -----------------------------------------------------
[tool.pixi.feature.gpu.dependencies]
cupy = ">=14.1.0"

# --- HPC features -----------------------------------------------------
[tool.pixi.feature.hpc.dependencies]
numpy = ">=2.3.0"
scipy = ">=1.16.0"
numba = "*"
pydantic = "*"
threadpoolctl = "*"
ase = "*"
meshio = "*"
scikit-fem = "*"
typer = "*"
h5py = "*"
gmsh = "*"
python-gmsh = "*"    # conda-forge gmsh does not include python bindings
pyvista = ">=0.46.0"
matplotlib = "*"

[tool.pixi.feature.hpc.pypi-dependencies]
mpi4py = ">=4.1.0"
cupy = ">=14.1.0"
quatrex = { path = ".", editable = true }

[tool.pixi.feature.hpc.pypi-options]
no-binary = ["mpi4py"]

# --- Pardiso feature --------------------------------------------------
[tool.pixi.feature.pardiso]
dependencies = { pydiso = "*" }
platforms = ["linux-64"]


# --- Tasks ------------------------------------------------------------
[tool.pixi.tasks.test]
cmd = "pytest"
default-environment = "dev"
description = "Run the test suite with pytest. You can pass any arguments to pytest."

[tool.pixi.tasks.format]
cmd = """
isort --profile black . --skip .pixi/ \
&& black . \
&& blacken-docs \
&& clang-format -i $(find src/ -name "*.cu")
"""
default-environment = "dev"
description = "Format the code with isort, black, and clang-format."

[tool.pixi.tasks.lint]
cmd = "ruff check"
default-environment = "dev"
description = "Lint the code with ruff."

[tool.pixi.tasks.docs]
cmd = """
rm -r docs/api/quatrex  && rm -r docs/api/qttools && rm -r docs/user_guide/parameters \
&& python docs/scripts/generate_api_pages.py \
&& python docs/scripts/generate_parameter_docs.py \
&& zensical
"""
default-environment = "docs"
description = "Generate documentation and run zensical. Invoke with `serve` to serve the documentation locally."
